[package]
name = "teatree"
version = "0.0.0"
authors = ["Sun <huachuang20@gmail.com>"]
edition = "2018"
readme = "README.md"
description = "the tree for all tea to mix. (Distributed and Blockchain Infrastructure)"
repository = "https://github.com/placefortea/teatree"
keywords = ["distributed", "blockchain", "infrastructure", "tea"]
license = "MIT/Apache-2.0"

[dependencies]
toml = "0.5"
serde = "1"
serde_derive = "1"

crypto = { path = "crypto" }
primitives = { path = "primitives" }
traits = { path = "traits" }
p2p = { path = "p2p" }
rpc = { path = "rpc" }
actor = { path = "actor" }

[workspace]
members = ["crypto", "primitives", "traits", "p2p", "rpc", "actor"]
