[package]
name = "teatree"
version = "0.0.1"
authors = ["Sun <huachuang20@gmail.com>"]
edition = "2018"
readme = "README.md"
description = "the tree for all tea to mix. (Distributed and Blockchain Infrastructure)"
repository = "https://github.com/placefortea/teatree"
keywords = ["distributed", "blockchain", "infrastructure", "tea"]
license = "MIT/Apache-2.0"

[dependencies]
toml = "0.5"
serde = "1"
serde_derive = "1"

crypto = { version = "0.0.1", path = "crypto" }
primitives = { version = "0.0.1", path = "primitives" }
traits = { version = "0.0.1", path = "traits" }
p2p = { version = "0.0.1", path = "p2p" }
rpc = { version = "0.0.1", path = "rpc" }
actor = { version = "0.0.1", path = "actor" }

[workspace]
members = ["crypto", "primitives", "traits", "p2p", "rpc", "actor"]
