[package]
name = "teatree"
version = "0.0.1"
authors = ["Sun <huachuang20@gmail.com>"]
edition = "2018"
readme = "README.md"
description = "the tree for all tea to mix. (Distributed and Blockchain Infrastructure)"
repository = "https://github.com/placefortea/teatree"
keywords = ["distributed", "blockchain", "infrastructure", "tea"]
license = "MIT/Apache-2.0"

[dependencies]
toml = "0.5"
serde = "1"
serde_derive = "1"

actix = "0.8"
actix_derive = "0.4"
tokio = "0.1"
futures = "0.1"

rand = "^0.5"
sha3 = "^0.7"
serde = "1.0"
serde_derive = "1.0"
ed25519-dalek = { version="1.0.0-pre.0", features = ["serde"]}

serde = "1"
serde_derive = "1"
bincode = "1"
byteorder = "1"
bytes = "0.4"
tokio = "0.1"
futures = "0.1"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
bincode = "1.0"
actix = "0.8"
bytes = "0.4"
dirs = "1.0"
jsonrpc-parse = "0.1"

serde = "1"
serde_derive = "1"
serde_json = "1"
tokio = "0.1"
futures = "0.1"
jsonrpc-parse = "0.1"
rand = "0.6"

serde = "1.0"
serde_derive = "1.0"
bincode = "1.0"
failure = "0.1"
rand = "0.5"
jsonrpc-parse = "0.1.1"

