[package]
name = "p2p"
version = "0.0.1"
authors = ["sun <huachuang20@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1"
serde_derive = "1"
bincode = "1"
byteorder = "1"
bytes = "0.4"
tokio = "0.1"
futures = "0.1"


actor = { path = "../actor" }
primitives = { path = "../primitives" }
crypto = { path = "../crypto" }
traits = { path = "../traits" }
