[package]
name = "rpc"
version = "0.0.1"
authors = ["sun <huachuang20@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1"
serde_derive = "1"
serde_json = "1"
tokio = "0.1"
futures = "0.1"
jsonrpc-parse = "0.1"
rand = "0.6"

actor = { path = "../actor" }
primitives = { path = "../primitives" }
crypto = { path = "../crypto" }
traits = { path = "../traits" }
