[package]
name = "traits"
version = "0.1.0"
authors = ["sun <huachuang20@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
bincode = "1.0"
failure = "0.1"
rand = "0.5"
jsonrpc-parse = "0.1"

crypto = { path = "../crypto" }
primitives = { path = "../primitives" }
actor = { path = "../actor" }
